# request-mirror

./: .env  .env.docker  Cargo.toml  Dockerfile  README.md  Rocket.toml  deploy.sh  docker-compose.yml
.github/workflows/: docker-image.yml  docker-test.yml  rust.yml
migrations/2024-03-02-000805_create_clients/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: error.hbs  error.html.hbs  history.hbs  history.html.hbs  index.hbs  index.html.hbs  ownership_registration.html.hbs  request_details.hbs  request_details.html.hbs
